force-app/main/default/objects/Shared_Note_Link__c/Shared_Note_Link__c.object-meta.xml
<CustomObject>
    <label>Shared Note Link</label>
    <nameField>
        <displayFormat>Note Link-{000000}</displayFormat>
        <label>Shared Note Link Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shared Note Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>