force-app/main/default/objects/Shared_Note_Link__c/fields/Authored_By__c.field-meta.xml
<CustomField>
    <fullName>Authored_By__c</fullName>
    <formula>Shared_Note__r.Authored_By__r.FirstName + &apos; &apos; + Shared_Note__r.Authored_By__r.LastName</formula>
    <label>Authored By</label>
    <type>Text</type>
</CustomField>