force-app/main/default/objects/Shared_Note_Link__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Shared Note Links</relationshipLabel>
    <relationshipName>Shared_Note_Links</relationshipName>
    <type>Lookup</type>
</CustomField>