force-app/main/default/objects/Shared_Note_Link__c/fields/Is_Contact_Added__c.field-meta.xml
<CustomField>
    <fullName>Is_Contact_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks whether the associated note is added by the contact associated with the ticket (used for notifications in the service stream)</description>
    <label>Is Contact Added</label>
    <type>Checkbox</type>
</CustomField>