force-app/main/default/objects/Shared_Note_Link__c/fields/Is_Read__c.field-meta.xml
<CustomField>
    <fullName>Is_Read__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The entity that SNL maps directly to is a &quot;Notification&quot; on Support Portal, this field dictates whether this field has been seen or not.</description>
    <label>Is Read</label>
    <type>Checkbox</type>
</CustomField>