force-app/main/default/objects/Shared_Note_Link__c/fields/Link_Role__c.field-meta.xml
<CustomField>
    <fullName>Link_Role__c</fullName>
    <label>Link Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Historical</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Referenced</fullName>
            </value>
            <value>
                <fullName>Related</fullName>
            </value>
            <value>
                <fullName>Source</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>