force-app/main/default/objects/Shared_Note_Link__c/fields/Note_Type__c.field-meta.xml
<CustomField>
    <fullName>Note_Type__c</fullName>
    <formula>TEXT(Shared_Note__r.Note_Type__c)</formula>
    <label>Note Type</label>
    <type>Text</type>
</CustomField>