force-app/main/default/objects/Shared_Note_Link__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Shared Note Links</relationshipLabel>
    <relationshipName>Shared_Note_Links</relationshipName>
    <type>Lookup</type>
</CustomField>