force-app/main/default/objects/Shared_Note_Link__c/fields/Pinned__c.field-meta.xml
<CustomField>
    <fullName>Pinned__c</fullName>
    <formula>Shared_Note__r.Pinned__c</formula>
    <label>Pinned</label>
    <type>Checkbox</type>
</CustomField>