force-app/main/default/objects/Shared_Note_Link__c/fields/Service_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Line__c</fullName>
    <formula>TEXT(Shared_Note__r.Service_Line__c)</formula>
    <label>Service Line</label>
    <type>Text</type>
</CustomField>