force-app/main/default/objects/Shared_Note_Link__c/fields/Shared_Note__c.field-meta.xml
<CustomField>
    <fullName>Shared_Note__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Shared Note</label>
    <referenceTo>SharedNote__c</referenceTo>
    <relationshipLabel>Shared Note Links</relationshipLabel>
    <relationshipName>Shared_Note_Links</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>