force-app/main/default/objects/Shared_Note_Link__c/fields/Target_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_API_Name__c</fullName>
    <formula>IF(NOT(ISBLANK(Opportunity__c)), &apos;Opportunity&apos;,
IF(NOT(ISBLANK(Contact__c)), &apos;Contact&apos;,
IF(NOT(ISBLANK(Account__c)), &apos;Account&apos;,
IF(NOT(ISBLANK(Lead__c)), &apos;Lead&apos;,
IF(NOT(ISBLANK(Ticket__c)), &apos;Case&apos;,
&quot;&quot;)))))</formula>
    <label>Target Object API Name</label>
    <type>Text</type>
</CustomField>