force-app/main/default/objects/Shared_Note_Link__c/fields/Target_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Record_Id__c</fullName>
    <formula>IF(NOT(ISBLANK(Opportunity__c)), Opportunity__c,
IF(NOT(ISBLANK(Contact__c)), Contact__c,
IF(NOT(ISBLANK(Account__c)), Account__c,
IF(NOT(ISBLANK(Lead__c)), Lead__c,
IF(NOT(ISBLANK(Ticket__c)), Ticket__c,
&quot;&quot;)))))</formula>
    <label>Target Record Id</label>
    <type>Text</type>
</CustomField>