force-app/main/default/objects/Shared_Note_Link__c/fields/Target_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Record_Name__c</fullName>
    <formula>IF(NOT(ISBLANK(Opportunity__c)), Opportunity__r.Name,
IF(NOT(ISBLANK(Contact__c)), Contact__r.FirstName + Contact__r.LastName ,
IF(NOT(ISBLANK(Account__c)), Account__r.Name,
IF(NOT(ISBLANK(Lead__c)), Lead__r.FirstName + Lead__r.LastName,
&quot;&quot;))))</formula>
    <label>Target Record Name</label>
    <type>Text</type>
</CustomField>