force-app/main/default/objects/Shared_Note_Link__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ticket</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Shared Note Links</relationshipLabel>
    <relationshipName>Shared_Note_Links</relationshipName>
    <type>Lookup</type>
</CustomField>